"Add Keycloak authentication with login on button click / KeycloakService to handle Keycloak JS adapter, Implement login() triggered by button click, Add HTTP interceptor to attach Bearer token automatically"